# aitp-rs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-MIT  Makefile  README.md  RELEASE_NOTES_v0.1.0-alpha.2.md  RELEASE_NOTES_v0.1.0-alpha.3.md  RELEASE_NOTES_v0.1.0-alpha.4.md  SECURITY.md  clippy.toml  deny.toml  docker-compose.yml  release-plz.toml  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
adapters/: README.md  python-adapter-template.py
bindings/aitp-node/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
bindings/aitp-node/src/: agent.rs  bundle.rs  delegation.rs  helpers.rs  lib.rs  oidc.rs  pinning.rs  renewal.rs  session.rs  tct.rs
bindings/aitp-node/tests/: _jws.mjs  test.mjs  test_delegation.mjs  test_manifest_verify.mjs  test_oidc_identity.mjs  test_p256_suite.mjs  test_pinning.mjs  test_renewal.mjs  test_revocation.mjs  test_session_bundle.mjs  test_tct_cache.mjs
bindings/aitp-py/: Cargo.toml  README.md  aitp.pyi  pyproject.toml
bindings/aitp-py/src/: agent.rs  bundle.rs  delegation.rs  helpers.rs  lib.rs  manifest.rs  oidc.rs  pinning.rs  renewal.rs  revocation.rs  session.rs  tct.rs
bindings/aitp-py/tests/: test_delegation.py  test_handshake.py  test_manifest_verify.py  test_oidc_identity.py  test_p256_suite.py  test_pinning.py  test_renewal.py  test_revocation.py  test_session_bundle.py  test_tct_cache.py
crates/aitp/: CHANGELOG.md  Cargo.toml
crates/aitp-cli/: Cargo.toml  README.md
crates/aitp-cli/src/: main.rs
crates/aitp-cli/tests/: cli.rs
crates/aitp-conformance/: Cargo.toml
crates/aitp-conformance/src/: lib.rs  main.rs
crates/aitp-conformance/src/adapter/: in_process.rs  mod.rs  subprocess.rs
crates/aitp-conformance/src/fixture/: loader.rs  mod.rs  placeholder.rs  types.rs
crates/aitp-conformance/src/ops/: mod.rs
crates/aitp-conformance/src/runner/: executor.rs  mod.rs  output.rs
crates/aitp-conformance/tests/: runner_integration.rs
crates/aitp-core/: CHANGELOG.md  Cargo.toml
crates/aitp-core/src/: aid.rs  base64url.rs  envelope.rs  error.rs  extensions.rs  jcs.rs  lib.rs  raw_url.rs  time.rs
crates/aitp-core/tests/: jcs_properties.proptest-regressions  jcs_properties.rs  jcs_standard_vectors.rs  kat.rs
crates/aitp-crypto/: CHANGELOG.md  Cargo.toml
crates/aitp-crypto/src/: error.rs  jws.rs  keys.rs  lib.rs  thumbprint.rs
crates/aitp-crypto/tests/: integration.rs  jws_kat.rs  kat.rs
crates/aitp-delegation/: CHANGELOG.md  Cargo.toml
crates/aitp-delegation/src/: builder.rs  error.rs  lib.rs  types.rs  verifier.rs
crates/aitp-delegation/tests/: attenuation_props.rs  multihop.rs  multihop_rejections.rs  round_trip.rs  schema.rs
crates/aitp-envelope/: CHANGELOG.md  Cargo.toml
crates/aitp-envelope/src/: lib.rs
crates/aitp-envelope/tests/: envelope_props.rs  signing.rs
crates/aitp-handshake/: CHANGELOG.md  Cargo.toml
crates/aitp-handshake/src/: error.rs  identity.rs  identity_oidc.rs  identity_pinned.rs  lib.rs  payloads.rs  state_machine.rs
crates/aitp-handshake/tests/: full_handshake.rs  oidc_handshake.rs  oidc_kid_selection.rs  p1_p8_regressions.rs  responder_identity.rs  responder_rejects_subject_mismatch.rs  revocation_hook.rs  schema.rs
crates/aitp-handshake/tests/fixtures/: mock_oidc.rs  mod.rs
crates/aitp-manifest/: CHANGELOG.md  Cargo.toml
crates/aitp-manifest/src/: builder.rs  error.rs  lib.rs  types.rs  verifier.rs
crates/aitp-manifest/tests/: identity_type_compat.rs  manifest_props.rs  pop_kat.rs  round_trip.rs  schema.rs
crates/aitp-rs-adapter/: Cargo.toml
crates/aitp-rs-adapter/src/: lib.rs  main.rs
crates/aitp-rs-adapter/tests/: dispatch.rs  ndjson_protocol.rs
crates/aitp-session-bundle/: CHANGELOG.md  Cargo.toml
crates/aitp-session-bundle/src/: builder.rs  error.rs  lib.rs  types.rs  verifier.rs
crates/aitp-session-bundle/tests/: round_trip.rs
crates/aitp-tct/: CHANGELOG.md  Cargo.toml
crates/aitp-tct/src/: builder.rs  error.rs  lib.rs  pop.rs  renewal.rs  revocation.rs  types.rs  verifier.rs
crates/aitp-tct/tests/: kat.rs  manifest_expiry_bound.rs  pop_and_cnf_rejections.rs  round_trip.rs  schema.rs
crates/aitp-transport-http/: CHANGELOG.md  Cargo.toml
crates/aitp-transport-http/src/: client.rs  client_config.rs  common.rs  dpop.rs  key_resolution.rs  lib.rs  net_guard.rs  obs.rs  replay_store.rs  retry.rs  revocation.rs  server.rs  server_limits.rs  session_bundle_server.rs  tls_pinning.rs  token_exchange.rs
crates/aitp-transport-http/tests/: client_manifest.rs  commit_session_rejections.rs  dpop_server_policy.rs  full_handshake_over_http.rs  handshake_boundary.rs  jwks_resolve_guards.rs  manifest_server.rs  rate_limit.rs  revocation_endpoint.rs  session_bundle_endpoint.rs  session_expiry.rs
crates/aitp/src/: facade.rs  lib.rs
crates/aitp/tests/: facade_handshake.rs
docs/: README.md  architecture.md  conformance-matrix.md  conformance.md  deployment.md  handshake-transcripts.md  jcs.md  key-management.md  multihop-delegation.md  sdk-node.md  sdk-python.md  session-bundle.md  tct-renewal.md  testing.md  transport-hardening.md
examples/: README.md
examples/two-agents/: Cargo.toml  README.md  docker-entrypoint.sh
examples/two-agents/src/: lib.rs
examples/two-agents/tests/: demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: delegation_parse.rs  delegation_verify.rs  envelope_parse.rs  jcs_canonicalize.rs  jws_verify.rs  manifest_parse.rs  revocation_verify.rs  tct_verify.rs
plans/: phase-10-spec-rc.3.md  phase-11-fixture-migration.md
scripts/: check-versions.sh  interop.sh  sync-schemas.sh  test.sh
tests/e2e-llm/: .env.example  Cargo.toml  README.md
tests/e2e-llm/src/: lib.rs  llm.rs  planner.rs  worker.rs
tests/e2e-llm/tests/: handshake_then_delegate.rs
tools/mint-conformance-fixtures/: Cargo.toml
tools/mint-conformance-fixtures/src/: main.rs
tools/mint-signed-examples/: Cargo.toml
tools/mint-signed-examples/src/: main.rs
tools/mint-signed-examples/tests/: verify.rs
(+83 files in other folders)
