[workspace]
resolver = "2"
# Exclude `fuzz/` — cargo-fuzz uses its own profile and nightly-only
# features. Run via `cargo +nightly fuzz run <target>` from the
# `fuzz/` directory.
exclude = ["fuzz"]
members = [
    "crates/aitp-core",
    "crates/aitp-crypto",
    "crates/aitp-manifest",
    "crates/aitp-handshake",
    "crates/aitp-tct",
    "crates/aitp-delegation",
    "crates/aitp-session-bundle",
    "crates/aitp-transport-http",
    "crates/aitp",
    "crates/aitp-conformance",
    "crates/aitp-rs-adapter",
    "examples/two-agents",
    "tools/mint-signed-examples",
    "tools/mint-conformance-fixtures",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/agentidentitytrustprotocol/aitp-rs"
homepage = "https://github.com/agentidentitytrustprotocol/aitp-rs"
authors = ["AITP contributors"]
keywords = ["aitp", "agent", "trust", "identity", "ed25519"]
categories = ["cryptography", "authentication"]

[workspace.dependencies]
# Pinned core deps. Every crate references these via { workspace = true }
# so the workspace has exactly one version of each.
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_jcs = "0.2"
thiserror = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
# P-256 ECDSA — RFC-AITP-0001 §5.4.3 / §5.5.2 wire format for the
# `p256` algorithm tag. Verifier-only by default; signing wired
# through `ecdsa` feature when needed.
p256 = { version = "0.13", default-features = false, features = ["ecdsa", "std"] }
base64ct = { version = "1.6", features = ["std"] }
secrecy = "0.8"
uuid = { version = "1.7", features = ["v4", "serde"] }
sha2 = "0.10"
url = { version = "2.5", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "clock"] }
rand = "0.8"

# HTTP transport (feature-gated, only used by aitp-transport-http)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", default-features = false }

# TLS — used by aitp-transport-http for SPKI cert pinning. The `ring`
# feature gives access to `rustls::crypto::ring::default_provider()` as a
# fallback when no CryptoProvider has been installed yet (e.g. callers
# building a pinned client config before any reqwest call has had a
# chance to install one). reqwest's rustls-tls feature installs a
# provider on first use; the fallback only fires before that.
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pki-types = "1.10"
# X.509 parser for extracting SubjectPublicKeyInfo bytes when pinning.
x509-parser = "0.17"

# OIDC (used by aitp-handshake and aitp-transport-http)
jsonwebtoken = "9.2"

# Non-poisoning Mutex for HTTP server state. parking_lot::Mutex never enters
# a poisoned state on a panic in a locked section — std::sync::Mutex would,
# and an unwrap on the resulting PoisonError hangs every subsequent request.
parking_lot = "0.12"

# Structured logging. Library crates emit spans + events; binaries (or
# downstream applications) install a subscriber. Default-features-off keeps
# the dep lean for library consumers that don't subscribe.
tracing = { version = "0.1", default-features = false, features = ["std", "attributes"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter"] }

# CLI (used by aitp-conformance)
clap = { version = "4.5", features = ["derive"] }

# Test deps
proptest = "1.4"
insta = { version = "1.36", features = ["json"] }
hex = "0.4"
# JSON Schema validator — used in tests/schema.rs to catch wire-type drift
# from the AITP JSON Schemas. Test-only; do NOT take a runtime dependency.
boon = "0.6"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
