[package]
name = "aitp-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# Outside the main workspace — cargo-fuzz uses a custom profile and
# nightly-only features. The main workspace explicitly excludes this
# directory.
[workspace]

[dependencies]
libfuzzer-sys = "0.4"
aitp-core = { path = "../crates/aitp-core" }
aitp-manifest = { path = "../crates/aitp-manifest" }
aitp-tct = { path = "../crates/aitp-tct" }
aitp-delegation = { path = "../crates/aitp-delegation" }
serde_json = "1.0"

[[bin]]
name = "envelope_parse"
path = "fuzz_targets/envelope_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "manifest_parse"
path = "fuzz_targets/manifest_parse.rs"
test = false
doc = false
bench = false

[[bin]]
name = "delegation_parse"
path = "fuzz_targets/delegation_parse.rs"
test = false
doc = false
bench = false
