# Standalone package: NOT a member of the aitp-rs workspace (it is in
# the workspace `exclude` list). Built by `@napi-rs/cli` against an
# external Node.js, so it carries its own `[workspace]` table.
[package]
name = "aitp-node"
version = "0.2.0"
edition = "2021"
description = "Agent Identity Trust Protocol — Node.js SDK"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2"

# `experimental` is an umbrella over post-v0.1 capabilities:
# - `experimental-renewal` — in-band TCT renewal (RFC-AITP-0005 §10).
# Each sub-feature can also be enabled individually. Wire via:
#   napi build --release -- --features experimental
[features]
default = []
experimental = [
    "experimental-renewal",
    "experimental-bundle",
    "experimental-pinning",
    "experimental-multihop-delegation",
]
experimental-renewal = ["aitp-tct/experimental-renewal"]
experimental-bundle = ["dep:aitp-session-bundle"]
# SPKI cert pinning — see aitp-py Cargo.toml for the rationale.
experimental-pinning = ["dep:x509-parser"]
# Draft RFC-AITP-0011 multi-hop delegation. Off by default so the strict
# v0.1 single-hop `verifyDelegation` is the only delegation verifier in a
# default build; enabling it additionally exposes
# `verifyDelegationExperimentalMultihop`. aitp-delegation has no feature of
# its own (multi-hop is always compiled, gated at runtime by max_hops), so
# this is a binding-level surface gate only.
experimental-multihop-delegation = []

[dependencies]
aitp-core = { path = "../../crates/aitp-core" }
aitp-crypto = { path = "../../crates/aitp-crypto" }
aitp-envelope = { path = "../../crates/aitp-envelope" }
aitp-manifest = { path = "../../crates/aitp-manifest" }
aitp-handshake = { path = "../../crates/aitp-handshake" }
aitp-tct = { path = "../../crates/aitp-tct" }
aitp-delegation = { path = "../../crates/aitp-delegation" }
aitp-session-bundle = { path = "../../crates/aitp-session-bundle", optional = true }
x509-parser = { version = "0.17", optional = true }
sha2 = "0.10"

napi = { version = "2.16", features = ["napi8"] }
napi-derive = "2.16"

serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
jsonwebtoken = "9.2"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
