# Standalone package: NOT a member of the aitp-rs workspace (it is in
# the workspace `exclude` list). Built by `@napi-rs/cli` against an
# external Node.js, so it carries its own `[workspace]` table.
[package]
name = "aitp-node"
version = "0.4.0"
edition = "2021"
description = "Agent Identity Trust Protocol — Node.js SDK"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "2"

# The full capability surface ships **by default** — the published
# `.node` exposes renewal, session bundles, SPKI pinning, and multi-hop
# delegation with no special build. Each capability is still a named
# feature so a minimal build can opt out via `--no-default-features`.
[features]
default = ["renewal", "session-bundle", "spki-pinning", "multihop-delegation"]
# In-band TCT renewal (RFC-AITP-0005 §10).
renewal = ["aitp-tct/experimental-renewal"]
# Session bundles (RFC-AITP-0010) — exposes `SessionBundleBuilder`.
session-bundle = ["dep:aitp-session-bundle"]
# SPKI cert pinning — see aitp-py Cargo.toml for the rationale.
spki-pinning = ["dep:x509-parser"]
# Multi-hop delegation (RFC-AITP-0011). The strict single-hop
# `verifyDelegation` is always present; this additionally exposes
# `verifyDelegationMultihop`. aitp-delegation has no feature of its own
# (multi-hop is always compiled, gated at runtime by max_hops), so this is
# a binding-level surface gate only.
multihop-delegation = []

[dependencies]
aitp-core = { path = "../../crates/aitp-core" }
aitp-crypto = { path = "../../crates/aitp-crypto" }
aitp-envelope = { path = "../../crates/aitp-envelope" }
aitp-manifest = { path = "../../crates/aitp-manifest" }
aitp-handshake = { path = "../../crates/aitp-handshake" }
aitp-tct = { path = "../../crates/aitp-tct" }
aitp-delegation = { path = "../../crates/aitp-delegation" }
aitp-session-bundle = { path = "../../crates/aitp-session-bundle", optional = true }
x509-parser = { version = "0.17", optional = true }
sha2 = "0.10"

napi = { version = "2.16", features = ["napi8"] }
napi-derive = "2.16"

serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
jsonwebtoken = "9.2"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
