# Standalone package: NOT a member of the aitp-rs workspace (it is in
# the workspace `exclude` list). Built by maturin against an external
# CPython, so it carries its own `[workspace]` table and `Cargo.lock`.
[package]
name = "aitp-py"
version = "0.1.0"
edition = "2021"
description = "Agent Identity Trust Protocol — Python SDK"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[lib]
name = "aitp"
crate-type = ["cdylib"]

# `extension-module` is opt-in so `cargo check` / `cargo build` work
# standalone. maturin enables it via pyproject.toml `[tool.maturin]`.
# A plain `cargo build` (feature off) links libpython for local
# testing; the importable wheel must be built with the feature on.
#
# `experimental` is an umbrella over post-v0.1 capabilities:
# - `experimental-renewal` — in-band TCT renewal (RFC-AITP-0005 §10).
# Each sub-feature can also be enabled individually.
[features]
extension-module = ["pyo3/extension-module"]
experimental = ["experimental-renewal", "experimental-bundle", "experimental-pinning"]
experimental-renewal = ["aitp-tct/experimental-renewal"]
experimental-bundle = ["dep:aitp-session-bundle"]
# SPKI cert pinning — exposes `compute_spki_hash()` and `SpkiPinVerifier`.
# Implemented standalone on top of x509-parser + sha2 (no rustls, no
# aitp-transport-http, no tokio/hyper) to keep the wheel small.
experimental-pinning = ["dep:x509-parser"]

[dependencies]
aitp-core = { path = "../../crates/aitp-core" }
aitp-crypto = { path = "../../crates/aitp-crypto" }
aitp-envelope = { path = "../../crates/aitp-envelope" }
aitp-manifest = { path = "../../crates/aitp-manifest" }
aitp-handshake = { path = "../../crates/aitp-handshake" }
aitp-tct = { path = "../../crates/aitp-tct" }
aitp-delegation = { path = "../../crates/aitp-delegation" }
aitp-session-bundle = { path = "../../crates/aitp-session-bundle", optional = true }
x509-parser = { version = "0.17", optional = true }
sha2 = "0.10"

pyo3 = "0.22"

serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
jsonwebtoken = "9.2"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
