# Standalone package: NOT a member of the aitp-rs workspace (it is in
# the workspace `exclude` list). Built by maturin against an external
# CPython, so it carries its own `[workspace]` table and `Cargo.lock`.
[package]
name = "aitp-py"
version = "0.4.1"
edition = "2021"
description = "Agent Identity Trust Protocol — Python SDK"
license = "MIT OR Apache-2.0"
publish = false

[workspace]

[lib]
name = "aitp"
crate-type = ["cdylib"]

# `extension-module` is opt-in so `cargo check` / `cargo build` work
# standalone. maturin enables it via pyproject.toml `[tool.maturin]`.
# A plain `cargo build` (feature off) links libpython for local
# testing; the importable wheel must be built with the feature on.
#
# The full capability surface ships **by default** — the published wheel
# exposes renewal, session bundles, SPKI pinning, and multi-hop
# delegation with no special build. Each capability is still a named
# feature so a minimal wheel can opt out via `--no-default-features`.
[features]
extension-module = ["pyo3/extension-module"]
default = ["renewal", "session-bundle", "spki-pinning", "multihop-delegation"]
# In-band TCT renewal (RFC-AITP-0005 §10).
renewal = ["aitp-tct/experimental-renewal"]
# Session bundles (RFC-AITP-0010) — exposes `SessionBundleBuilder`.
session-bundle = ["dep:aitp-session-bundle"]
# SPKI cert pinning — exposes `compute_spki_hash()` and `SpkiPinVerifier`.
# Implemented standalone on top of x509-parser + sha2 (no rustls, no
# aitp-transport-http, no tokio/hyper) to keep the wheel small.
spki-pinning = ["dep:x509-parser"]
# Multi-hop delegation (RFC-AITP-0011). The strict single-hop
# `verify_delegation` is always present; this additionally exposes
# `verify_delegation_multihop`. aitp-delegation has no feature of its own
# (multi-hop is always compiled, gated at runtime by max_hops), so this is
# a binding-level surface gate only.
multihop-delegation = []

[dependencies]
aitp-core = { path = "../../crates/aitp-core" }
aitp-crypto = { path = "../../crates/aitp-crypto" }
aitp-envelope = { path = "../../crates/aitp-envelope" }
aitp-manifest = { path = "../../crates/aitp-manifest" }
aitp-handshake = { path = "../../crates/aitp-handshake" }
aitp-tct = { path = "../../crates/aitp-tct" }
aitp-delegation = { path = "../../crates/aitp-delegation" }
aitp-session-bundle = { path = "../../crates/aitp-session-bundle", optional = true }
x509-parser = { version = "0.17", optional = true }
sha2 = "0.10"

# abi3-py39: build a single forward-compatible wheel (cp39-abi3) per
# platform that runs on CPython 3.9+ via the stable ABI, instead of one
# wheel per interpreter version. Keeps the release matrix to one build
# per OS/arch and matches `requires-python = ">=3.9"` in pyproject.toml.
pyo3 = { version = "0.22", features = ["abi3-py39"] }

serde_json = "1"
uuid = { version = "1", features = ["v4"] }
url = "2"
jsonwebtoken = "9.2"
rand = "0.8"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"
