[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aitp"
version = "0.1.0"
description = "Agent Identity Trust Protocol — Python SDK"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pyjwt[crypto]>=2.8", "cryptography>=41"]

[tool.maturin]
features = ["extension-module"]
module-name = "aitp"
# Ship the hand-maintained type stubs in the wheel so editors can
# autocomplete `aitp.AitpAgent`, `aitp.JwksProvider`, etc.
include = [
    { path = "aitp.pyi", format = "sdist" },
    { path = "aitp.pyi", format = "wheel" },
]
