[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

# Distribution name is `aitp-sdk` (the bare `aitp` name is already taken
# on PyPI by an unrelated project). The IMPORT name stays `aitp` via
# `[tool.maturin] module-name` below — so it's `pip install aitp-sdk`
# then `import aitp`.
[project]
name = "aitp-sdk"
version = "0.4.1"
description = "Agent Identity Trust Protocol — Python SDK"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
]

[project.optional-dependencies]
dev = ["pytest", "httpx", "pyjwt[crypto]>=2.8", "cryptography>=41"]

[tool.maturin]
features = ["extension-module"]
module-name = "aitp"
# Ship the hand-maintained type stubs in the wheel so editors can
# autocomplete `aitp.AitpAgent`, `aitp.JwksProvider`, etc.
include = [
    { path = "aitp.pyi", format = "sdist" },
    { path = "aitp.pyi", format = "wheel" },
]
