[package]
name = "aitp-conformance"
description = "Conformance test runner for AITP implementations"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[features]
default = []
# `in-process` brings the in-process adapter into scope. It calls
# directly into `aitp-rs-adapter`'s library API, so all per-tier ops
# (Tier A through D) come from the same dispatch the subprocess
# binary uses — no risk of in-process and subprocess drifting.
in-process = ["aitp-rs-adapter"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
clap = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

aitp-core = { path = "../aitp-core", version = "0.1.0-rc.1" }
aitp-crypto = { path = "../aitp-crypto", version = "0.1.0-rc.1" }
aitp-rs-adapter = { path = "../aitp-rs-adapter", version = "0.1.0-rc.1", optional = true }

[dev-dependencies]
aitp-tct = { path = "../aitp-tct", version = "0.1.0-rc.1" }
