[package]
name = "aitp-core"
description = "Core types, JSON canonicalization, base64url, and AID handling for AITP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_jcs = { workspace = true }
thiserror = { workspace = true }
base64ct = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
proptest = { workspace = true }
