[package]
name = "aitp-delegation"
description = "Single-hop delegation tokens for AITP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
aitp-core = { path = "../aitp-core", version = "=0.4.1" }
aitp-crypto = { path = "../aitp-crypto", version = "=0.4.1" }
aitp-tct = { path = "../aitp-tct", version = "=0.4.1" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
boon = { workspace = true }
proptest = { workspace = true }
