[package]
name = "aitp-manifest"
description = "Agent Manifest issuance and verification for AITP"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
homepage.workspace = true

[dependencies]
aitp-core = { path = "../aitp-core", version = "=0.4.0" }
aitp-crypto = { path = "../aitp-crypto", version = "=0.4.0" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
boon = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true }
